service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web
  namespace: web-canary
spec:
#  type: ClusterIP
  selector:
    app: web-canary
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
