ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-web
  namespace: web
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: minikube.minikube
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
